# grouter

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  brace-fix.patch  check-cost-plan.md  docker-compose.yml  fix-smart-router.md  implemenation_plan_0709.md  orig-0.tmp  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  provider-fix.patch  railway.toml  smart_routing_buildplan.md  staging-0.tmp  tauri-build-plan.md  test-pricing-sync.js  test-subrouter-pricing.js  tsconfig.json  vitest.config.ts
.githooks/: pre-push
dashboard/: index.html  package.json  vite.config.ts
grouter-switcher/: .gitignore  MACOS_Grouter_Launcher.command  README.md  index.html  make-shortcut.ps1  package.json  rebuild.bat  vite.config.ts
grouter-switcher/src-tauri/: Cargo.toml  tauri.conf.json
grouter-switcher/src-tauri/icons/: icon.icns
grouter-switcher/src-tauri/src/: claude.rs  codex.rs  commands.rs  config.rs  error.rs  main.rs  marketplace.rs  opencode.rs  paths.rs  state.rs  test_support.rs  tools.rs  verify.rs
migrations/: 1735689600000_init.down.sql  1735689600000_init.up.sql  1735689700000_settings.down.sql  1735689700000_settings.up.sql  1735689800000_key_reveal.down.sql  1735689800000_key_reveal.up.sql  1735689900000_router.down.sql  1735689900000_router.up.sql  1735690000000_request_logs.down.sql  1735690000000_request_logs.up.sql  1735690100000_request_log_timing.down.sql  1735690100000_request_log_timing.up.sql  1735690200000_supplier_activity.up.sql  1735690300000_supplier_keys.down.sql  1735690300000_supplier_keys.up.sql  (+28 more)
src/: app.ts  (+5 more)
(+90 files in other folders)
