[package]
name = "grouter-switcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
keyring = "2"
open = "5"
tokio = { version = "1", features = ["sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
